--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@hookform/resolvers": "^3.9.0",
 		"aos": "^2.3.4",
 		"axios": "^1.7.2",
 		"mobx": "^6.13.0",
