--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.1",
 		"react-router-dom": "^6.24.1",
+		"swr": "^2.2.5",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
