--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.5"
+    "mongoose": "^8.4.5",
+    "route-node": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
