--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
-    "route-node": "^4.1.1"
+    "route-node": "^4.1.1",
+    "stemmer": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
