--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,1 +1,26 @@
-
+{
+	"short_name": "Спортивный Защитник",
+	"name": "Спортивный Защитник",
+	"description": "Ваши права в фитнес-индустрии",
+	"icons": [
+		{
+			"src": "favicon.ico",
+			"sizes": "64x64 32x32 24x24 16x16",
+			"type": "image/x-icon"
+		},
+		{
+			"src": "logo192.png",
+			"type": "image/png",
+			"sizes": "192x192"
+		},
+		{
+			"src": "logo512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		}
+	],
+	"start_url": ".",
+	"display": "standalone",
+	"theme_color": "#FFFFFF",
+	"background_color": "#FDB07C"
+}
