--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Denis",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.5",
-    "route-node": "^4.1.1",
-    "stemmer": "^0.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon ./index.ts",
+		"build": "npx tsc",
+		"start": "node dist/index.js"
+	},
+	"author": "Denis",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"express": "^4.19.2",
+		"mongoose": "^8.4.5",
+		"route-node": "^4.1.1",
+		"stemmer": "^0.1.4"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/node": "^22.0.0",
+		"nodemon": "^3.1.4",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4"
+	}
 }
